# skz-database

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 33285d49e2d8_add_indexes_and_pg_trgm.py  4ee870d8ee1e_initial_schema.py  7157369663ce_add_song_credit_check_constraint.py  74519399055f_add_collaborators_table.py  a6d0a556c97d_add_spotify_id_to_releases.py  b6a411184eed_seed_artists.py  ced17bba4ac8_add_check_constraints_for_enums.py  e7a9ac572411_add_release_subtype.py  e9269245b1b1_add_musicbrainz_id_to_songs.py  f649e559a69e_add_youtube_url_to_songs.py
app/: config.py  constants.py  database.py  main.py
app/models/: __init__.py  artists.py  charts.py  collaborators.py  credits.py  releases.py  songs.py
app/repositories/: __init__.py  artists.py  charts.py  collaborators.py  releases.py  songs.py
app/routers/: __init__.py  artists.py  charts.py  collaborators.py  releases.py  songs.py  tracks.py
app/schemas/: __init__.py  artists.py  charts.py  collaborators.py  pagination.py  releases.py  songs.py  tracks.py
scrapers/: base_scraper.py  config.py  fandom_scraper.py  musicbrainz_report.py  musicbrainz_scraper.py  restore_youtube_urls.py  run_all.py  spotify_scraper.py  utils.py  wikipedia_scraper.py  wikipedia_song_articles_scraper.py  wikipedia_songs_scraper.py  youtube_scraper.py
